force-app/main/default/objects/Contact/fields/Accreditation_Status__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Status__c</fullName>
    <description>Accredited-investor verification status for this investor contact.</description>
    <inlineHelpText>Pending until accreditation is verified; set to Re-verify when documentation has expired.</inlineHelpText>
    <label>Accreditation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Re-verify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>