force-app/main/default/objects/Contact/fields/Active_Investor__c.field-meta.xml
<CustomField>
    <fullName>Active_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this contact is currently an active investor.</description>
    <inlineHelpText>Check this box if the contact is currently an active investor.</inlineHelpText>
    <label>Active Investor</label>
    <type>Checkbox</type>
</CustomField>