force-app/main/default/objects/Contact/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <description>Display-only field used solely by the Top 5 Investors dashboard widget. Not shown on the Contact record page.</description>
    <label>Distribution</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>