force-app/main/default/objects/Contact/fields/Investing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Investing_Entity__c</fullName>
    <description>Display-only field used solely by the Top 5 Investors dashboard widget. Not shown on the Contact record page.</description>
    <label>Investing Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>