force-app/main/default/objects/Contact/fields/KYC_Complete__c.field-meta.xml
<CustomField>
    <fullName>KYC_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Know Your Customer identity verification has been completed for this investor contact.</description>
    <inlineHelpText>Check when all KYC identity-verification steps are complete for this contact.</inlineHelpText>
    <label>KYC Complete</label>
    <type>Checkbox</type>
</CustomField>