force-app/main/default/objects/Contact/fields/Mobile_Activated__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Activated</label>
    <type>Checkbox</type>
</CustomField>