force-app/main/default/objects/Contact/fields/Portal_Activated__c.field-meta.xml
<CustomField>
    <fullName>Portal_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Activated</label>
    <type>Checkbox</type>
</CustomField>