force-app/main/default/objects/Contact/fields/Repeat_Investor__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repeat Investor</label>
    <type>Checkbox</type>
</CustomField>