force-app/main/default/objects/Contact/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>Sensitive Social Security Number for an individual investor contact. Access restricted via field-level security; surfaced to most users only through the masked formula field.</description>
    <inlineHelpText>Enter the SSN (format ###-##-####). Restricted field — visible only to authorized roles.</inlineHelpText>
    <label>SSN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>