force-app/main/default/objects/Contact/fields/SSN_Masked__c.field-meta.xml
<CustomField>
    <fullName>SSN_Masked__c</fullName>
    <description>Read-only masked rendering of the contact SSN, showing only the last four digits. Safe to display on layouts for all roles.</description>
    <formula>&apos;***-**-&apos; &amp; RIGHT(SSN__c, 4)</formula>
    <inlineHelpText>Displays the last four digits of the SSN. The full value is stored on the restricted SSN field.</inlineHelpText>
    <label>SSN (Masked)</label>
    <type>Text</type>
</CustomField>